<resources>
    <string name="app_name">Meg_projekt</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">login</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_overview">Overview</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_reservation">Reservation</string>
    <string name="title_activity_item_overview">ItemOverview</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_loaned_items">Loaned Items</string>
    <string name="title_activity_item_detail">Detail</string>
    <string name="title_activity_overlay">OverlayActivity</string>
    <string name="title_activity_activity_reservations">Reservations</string>

    <string-array name="server_array">
        <item>mge1.dev.ifs.hsr.ch</item>
        <item>mge2.dev.ifs.hsr.ch</item>
        <item>mge3.dev.ifs.hsr.ch</item>
        <item>mge4.dev.ifs.hsr.ch Samoa</item>
        <item>mge5.dev.ifs.hsr.ch</item>
        <item>mge6.dev.ifs.hsr.ch</item>
        <item>mge7.dev.ifs.hsr.ch</item>
        <item>mge8.dev.ifs.hsr.ch</item>
    </string-array>

    <string name="drawer_header_text">logged out</string>
    <string name="drawer_overview">Item Overview</string>
    <string name="drawer_myloans">My Loans</string>
    <string name="drawer_myreservations">My Reservations</string>
    <string name="drawer_submenu_title">Settings</string>
    <string name="drawer_submenu_conf">Configure</string>
    <string name="drawer_submenu_login">Login/Out</string>
    <string name="drawer_submenu_logout">Logout</string>


</resources>
