<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_overview"
            android:title="@string/drawer_overview" />
        <item
            android:id="@+id/drawer_myloans"
            android:title="@string/drawer_myloans" />
    </group>

    <item android:title="@string/drawer_submenu_title">
        <menu android:id="@+id/menu_config">
            <item
                android:id="@+id/drawer_submenu_conf"
                android:title="@string/drawer_submenu_conf"
                />
            <item
                android:id="@+id/drawer_submenu_loginout"
                android:title="@string/drawer_submenu_login"
                />
        </menu>
    </item>
</menu>